# AssignmentManager

./: .gitignore  CMakeLists.txt  Dashboard.cpp  Dashboard.h  Dashboard.ui  README.md  dashboard.cpp  databasemanager.cpp  databasemanager.h  googleauthmanager.cpp  googleauthmanager.h  googledriveservice.cpp  googledriveservice.h  gptclass.cpp  gptclass.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plagiarismdetector.cpp  plagiarismdetector.h  replace-secrets.txt  resource.qrc
